[package]
name = "dump-schedule"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.8", features = ["derive"] }
calamine = "0.19.1"
curl = "0.4.44"

[profile.release]
debug = 0
opt-level = 'z'
lto = true
codegen-units = 1
strip = true

